--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Roni Nakash
-logo: /assets/img/ro.jpg
+logo: /assets/img/ro-m.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
