--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Roni Nakash
 logo: /assets/img/ro-m.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
-google_analytics:
+google_analytics: G-HX7669DJTM
 theme: jekyll-theme-minimal
