--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 logo: /assets/img/ro-m.png
-title:     Roni Nakash
+title: <p align="center"> Roni Nakash </p>    
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics: G-NK5QYM5W74
