--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <p align="center"> Roni Nakash </p>    
+title: <p align="center"> Chris Tran </p>
 logo: /assets/img/ro-m.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
