--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,18 @@
 title: <p align="center"> Roni Nakash </p>
 logo: /assets/img/ro-m.png
-description: Minimal is a theme for GitHub Pages.
+description:
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
+  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  </p>
+  
+  <p align="justify">
+  I am pursing MS degree in Business Analytics at Simon Business School, University of Rochester.
+  <br><br>
+  I am currently a Machine Learning Research Intern at Skim AI Technologies with a focus on NLP and Deep Learning research.
+  <br><br>
+  </p>
 show_downloads: true
 google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-minimal
