--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: <p align="center"> Roni Nakash </p>
 logo: /assets/img/ro-m.png
 description:
   <p align="center">
-  <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
-  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  <a href="pdf/resumedf">Resume</a> |
+  <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
+  <a href="https://github.com/chriskhanran">GitHub</a>
   </p>
   
   <p align="justify">
