--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ description:
   I am currently a Machine Learning Research Intern at Skim AI Technologies with a focus on NLP and Deep Learning research.
   <br><br>
   </p><br>
-show_downloads: true
+show_downloads: false
 google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-minimal
