--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: <p align="center"> Roni Nakash </p>
-logo: /assets/img/ro-m.png <br>
+logo: /assets/img/ro-m.png 
+<br>
 description:
   <p align="center">
   <a href="pdf/resumedf">Resume</a> |
