--- a/_config.yml
+++ b/_config.yml
@@ -18,4 +18,4 @@ show_downloads: false
 google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-minimal
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/img/e.png">
