--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description:
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
+  <a <link rel="shortcut icon" type="image/x-icon" href="/assets/img/e.png"> </a>
+
   </p>
   
   <p align="justify">
