--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
-  <a href="/assets/img/e.png" </a>
+  <a href="assets/img/e.png" </a>
 
   </p>
   
