--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,13 @@ description:
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
   <a href="assets/img/e.png" </a>
-
   </p>
+  
   
   <p align="justify">
   I am pursing MS degree in Bu
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/img/e.png">
+
   <br><br>
   I am currently a Machine 
   <br><br>
