--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,21 @@
 title: <p align="center"> Roni Nakash </p>
 logo: /assets/img/ro-m.png 
+logo: <link rel="shortcut icon" type="image/x-icon" href="/assets/img/e.png">
 
 description:
   <p align="center">
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
-  <a href="assets/img/e.png" </a>
   </p>
-  
-  
   <p align="justify">
   I am pursing MS degree in Bu
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/img/e.png">
 
   <br><br>
   I am currently a Machine 
   <br><br>
   </p><br>
-show_downloads: false
+show_downloads: true
 google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-minimal
 
-logo: <link rel="shortcut icon" type="image/x-icon" href="/assets/img/e.png">
