--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: <p align="center"> Roni Nakash </p>
 logo: /assets/img/ro-m.png 
-name: test 1
-url: test 2
-masthead_title: test 3
+
 description:
   <p align="center">
+  <a logo: /assets/img/ro-m.png </a> <br>
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
@@ -21,6 +20,4 @@ show_downloads: true
 google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-minimal
 
-links:
-    - label: "Email"
-      icon: href="/assets/img/e.png
+
