--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Roni Nakash </p>
-logo: /assets/img/ro-m.png 
+logo: "/assets/img/ro-m.png?raw=true"
 
 description:
   <p align="center">
