--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description:
   <br><br>
   </p><br>
   
-  <link rel="shortcut icon" type="image/x-icon" href="whatever_folder_name/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/ro-m.png">
 show_downloads: false
 google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-minimal
