--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description:
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
+  <a href="assets/img/f.ico">mhgjhgjhgjhg</a>
+
   </p>
   <p align="justify">
   I am pursing MS degree in Bu
