--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanran">GitHub</a>
-  <a href="assets/img/f.ico">mhgjhgjhgjhg</a>
+  <img src="assets/img/f.ico" alt="Italian Trulli">
 
   </p>
   <p align="justify">
