--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description:
   <p align="center">
   <a href="pdf/resumedf">Resume</a> <br>
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
+  <img src="assets/img/e.png" alt="Italian Trulli" style="width:20px;height:20px;">
   <a href="https://github.com/chriskhanran">GitHub</a>
   <img src="assets/img/e.png" alt="Italian Trulli" style="width:20px;height:20px;">
 
