--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description:
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <img src="assets/img/e.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="https://github.com/chriskhanran">GitHub</a>
+  <a href="https://github.com/chriskhanran" style="font-size:100px;">GitHub</a>
   <img src="assets/img/e.png" alt="Italian Trulli" style="width:20px;height:20px;">
 
   </p>
