--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,17 @@ logo: "/assets/img/ro-m.png?raw=true"
 description:
   <p align="center">
   <a href="pdf/resumedf">Resume</a> <br>
+ 
+  <img src="assets/img/g1.png" alt="Italian Trulli" style="width:17px;height:17px;">
+  <a href="https://www.linkedin.com/in/chrisknhtran/">Gmail</a>
+  <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
+  <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a>
+  <img src="assets/img/geo2.png" alt="Italian Trulli" style="width:17px;height:17px;">
+  <a >tel vaiv</a>
+  <img src="assets/img/t5.png" alt="Italian Trulli" style="width:17px;height:17px;">
+  <a >(+972) 526634033</a>
+  
+  
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <img src="assets/img/e.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="https://github.com/chriskhanran">GitHub</a>
