--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ description:
   <a href="pdf/resumedf">Resume</a> <br>
  
   <img src="assets/img/g1.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="https://www.linkedin.com/in/chrisknhtran/">Gmail</a>
+  <a href="https://www.linkedin.com/in/chrisknhtran/">Gmail</a> <br>
   <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> <br>
   <img src="assets/img/geo2.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a >tel vaiv</a>
+  <a >tel vaiv</a> <br>
   <img src="assets/img/t5.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a >(+972) 526634033</a>
+  <a >(+972) 526634033</a> <br>
   
   
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
