--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <p align="center"> Roni Nakash </p>
 logo: "/assets/img/ro-m.png?raw=true"
 
 description:
-  <p align="center">
+  <p align="left">
   <a href="pdf/resumedf">Resume</a> <br>
  
   <img src="assets/img/g1.png" alt="Italian Trulli" style="width:17px;height:17px;">
@@ -10,10 +10,10 @@ description:
   <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="https://www.linkedin.com/in/chrisknhtran/" style="font-size:20px;">LinkedIn</a> <br>
   <img src="assets/img/geo2.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a style="font-size:20px; ">tel vaiv</a> <br>
+  <a href=" " style="font-size:20px;">Tel Aviv</a> <br>
   <img src="assets/img/t5.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a >(+972) 526634033 style="font-size:20px;"</a> <br>
-  
+  <a href=" " style="font-size:20px;">(+972) 526634033</a> <br>
+
   
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <img src="assets/img/e.png" alt="Italian Trulli" style="width:17px;height:17px;">
