--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ description:
   <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="https://www.linkedin.com/in/chrisknhtran/" style="font-size:20px;">LinkedIn</a> <br>
   <img src="assets/img/geo2.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href=" " style="font-size:20px;">Tel Aviv</a> <br>
+  <a style="font-size:20px;">Tel Aviv</a> <br>
   <img src="assets/img/t5.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href=" " style="font-size:20px;">(+972) 526634033</a> <br>
-
+  <a style="font-size:20px;">(+972) 526634033</a> <br>
+  (+972) 526634033
   
   <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
   <img src="assets/img/e.png" alt="Italian Trulli" style="width:17px;height:17px;">
