--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ description:
   <a href="pdf/resumedf">Resume</a> <br>
  
   <img src="assets/img/g1.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="https://www.linkedin.com/in/chrisknhtran/" style="font-size:20px;">Gmail</a> <br>
+  <a href="roninksh@gmail.com/" style="font-size:20px;">Gmail</a> <br>
   <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="https://www.linkedin.com/in/chrisknhtran/" style="font-size:20px;">LinkedIn</a> <br>
+  <a href="https://www.linkedin.com/in/roni-nakash/" style="font-size:20px;">LinkedIn</a> <br>
   <img src="assets/img/geo2.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a style="font-size:20px;">Tel Aviv</a> <br>
   <img src="assets/img/t5.png" alt="Italian Trulli" style="width:17px;height:17px;">
