--- a/_config.yml
+++ b/_config.yml
@@ -3,23 +3,18 @@ logo: "/assets/img/ro-m.png?raw=true"
 
 description:
   <p align="left">
-  <a href="pdf/resumedf">Resume</a> <br>
+  <!---   <a href="pdf/resumedf">Resume</a> <br> --->
  
   <img src="assets/img/g1.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="roninksh@gmail.com/" style="font-size:20px;">Gmail</a> <br>
   <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="https://www.linkedin.com/in/roni-nakash/" style="font-size:20px;">LinkedIn</a> <br>
-  <img src="assets/img/geo2.png" alt="Italian Trulli" style="width:17px;height:17px;">
+  <img src="assets/img/geo1.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a style="font-size:20px;">Tel Aviv</a> <br>
   <img src="assets/img/t5.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a style="font-size:20px;">(+972) 526634033</a> <br>
-  (+972) 526634033
   
-  <a href="https://www.linkedin.com/in/chrisknhtran/">LinkedIn</a> |
-  <img src="assets/img/e.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="https://github.com/chriskhanran">GitHub</a>
-  <a href="https://github.com/chriskhanran" style="font-size:20px;">GitHub</a>
-  <img src="assets/img/e.png" alt="Italian Trulli" style="width:20px;height:20px;">
+ 
 
   </p>
   <p align="justify">
