--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:
   <p align="left">
   
   <img src="assets/img/g1.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="roninksh@gmail.com/" style="font-size:20px;">Gmail</a> <br>
+  <a href="mailto:lorem@ipsum.com" style="font-size:20px;">Gmail</a> <br>
   <img src="assets/img/l2.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a href="https://www.linkedin.com/in/roni-nakash/" style="font-size:20px;">LinkedIn</a> <br>
   <img src="assets/img/geo1.png" alt="Italian Trulli" style="width:17px;height:17px;">
