--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description:
   <img src="assets/img/geo3.png" alt="Italian Trulli" style="width:19px;height:19px;">
   <a href=" " style="font-size:20px;">Tel Aviv</a> <br>
   <img src="assets/img/t4.png" alt="Italian Trulli" style="width:18px;height:18px;">
-  <a href=" " style="font-size:20px;">(+972) 526634033</a> <br>
+  <a style="font-size:20px;">(+972) 526634033</a> <br>
   
  
 
