--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,8 @@ description:
 
   </p>
   <p align="justify">
-  Hello and welcome to my portfolio! 
-  My name is Roni Nakash, and I am a Data Scientist.
-  I have a Master (MS.c) in Industrial Engineering (specialization in Data Science) and a bachelor (BS.c) in Industrial Engineering (specialization in information systems) from Ben Gurion University.
-  In this portfolio, I will share with you some of my knowledge in the fields of Data Science, Machine Learning, Artificial Intelligence Statistics, Python and more.
-  hope you will find this information helpful, and I would love to hear your opinion :)
-  lease feel free to contact me in any matter!
+  I would love to hear your opinion :)
+  Feel free to contact me in any matter!
   Cheers :)
 
 
