--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ description:
 
   </p>
   <p align="justify">
-  I would love to hear your opinion :)
-  Feel free to contact me in any matter!
+  I would love to hear your opinion :) <br>
+  Feel free to contact me in any matter! <br>
   Cheers :)
 
 
