--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ description:
   <p align="left">
   
   <img src="assets/img/g2.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="mailto:lorem@ipsum.com" style="font-size:20px;">Gmail</a> <br>
+  <a href="mailto:lorem@ipsum.com" style="font-size:20px;">Gmail</a> <br>  <br>
   <img src="assets/img/l1.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a href="https://www.linkedin.com/in/roni-nakash/" style="font-size:20px;">LinkedIn</a> <br>
+  <a href="https://www.linkedin.com/in/roni-nakash/" style="font-size:20px;">LinkedIn</a> <br>  <br>
   <img src="assets/img/geo3.png" alt="Italian Trulli" style="width:19px;height:19px;">
-  <a style="font-size:20px;">Tel Aviv</a> <br>
+  <a style="font-size:20px;">Tel Aviv</a> <br>  <br>
   <img src="assets/img/t1.png" alt="Italian Trulli" style="width:19px;height:19px;">
-  <a style="font-size:19px;">(+972) 526634033</a> <br>
-  
+  <a style="font-size:19px;">(+972) 526634033</a> <br>  <br>
+   
  
 
   </p>
