--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,6 @@ description:
   <link rel="shortcut icon" type="x-icon" href="assets/img/f.ico">
 show_downloads: false
 google_analytics: G-NK5QYM5W74
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 
 
