--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description:
   <img src="assets/img/geo3.png" alt="Italian Trulli" style="width:17px;height:17px;">
   <a style="font-size:18px;">Tel Aviv</a> <br>  
   <img src="assets/img/t1.png" alt="Italian Trulli" style="width:17px;height:17px;">
-  <a style="font-size:17px;">(+972) 526634033</a> <br>  
+  <a style="font-size:17px;">(+972) 526634033</a> 
    
  
 
