--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,5 @@ google_analytics: G-NK5QYM5W74
 theme: jekyll-theme-slate
 
 
+>**About me:** (M.Sc.) Data Scientist with a passion for the fields of data, learning models, programming, business challenges, and everything in between.
+
