--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description:
 
   </p>
   <p align="justify">
-  >**About me:** (M.Sc.) Data Scientist with a passion for the fields of data, learning models, programming, business challenges, and everything in between.
+ **About me:** (M.Sc.) Data Scientist with a passion for the fields of data, learning models, programming, business challenges, and everything in between.
 
 
 
