--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ description:
 
   </p>
   <p align="justify">
-About me, My name is Roni Nakash and I am a (M.Sc.) Data Scientist with a passion for the fields of data, learning models, programming, business challenges, and everything in between.
+  About me, My name is Roni Nakash and I am a (M.Sc.) Data Scientist with a passion for the fields of data, 
+  learning models, programming, business challenges, and everything in between. 
   </p> <br>
   
   <link rel="shortcut icon" type="x-icon" href="assets/img/f.ico">
