--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description:
   </p>
   <p align="justify">
   About me,<br> 
-  My name is Roni Nakash and I am a (M.Sc.) Data Scientist with a passion for the fields of data, 
+  My name is Roni Nakash and I am a (M.Sc.) Data Scientist with a passion for the fields of data Science, 
   learning models, programming, business challenges, and everything in between. 
   </p> <br>
   
